# Homework

./: .gitignore  CMakeLists.txt  OnlineGDB.md  README.md
Ayudantias/10.11.2022/: Ejercicio1.c
Ayudantias/17.11.2022/: Ejercicio1.c  Ejercicio2.c
Clases/02.11.2022/: Ejercicio1.c
Clases/07.11.2022/: Ejercicio1.c  Ejercicio2.c  Ejercicio3.c  Ejercicio4.c
Clases/17.05.2022/: PerimetroAreaCircunferenciaConFunciones.c
Clases/17.10.2022/: Ejercicio1.c  Ejercicio2.c  Ejercicio3.c
Clases/18.04.2022/: Ejercicio6.c
Clases/19.04.2022/: Funciones.c  FuncionesMatematicas.c
Clases/23.5.2022/: Ejercicio2.c  Ejercicio3.c  Ejercicio4.c  TipoDeTriangulo.c
Clases/24.08.2022/: Ejercicio1.c  Ejercicio2.c  Ejercicio3.c  Ejercicio4.c  Ejercicio5.c
Clases/24.10.2022/: Ejercicio1.c
Clases/26.10.2022/: Ejercicio1.c
Clases/29.8.2022/: Ejercicio1.c  Ejercicio2.c  Ejercicio3.c  Ejercicio4.c  Ejercicio5.c
Clases/30.05.2022/: Ejercicio4.c
Clases/31.8.2022/: Ejercicio1.c
Guias/Guia1/: Ejercicio_a.c  Ejercicio_b.c
Guias/Guia2/: Ejemplo_1.c  Ejemplo_3.c  Ejercicio_a.c  Ejercicio_b.c
OnlineGDBUploader/: build.gradle  settings.gradle
OnlineGDBUploader/src/main/kotlin/cl/franciscosolis/onlinegdbuploader/: Main.kt
Problemas/: Problema1.c  Problema2.c  Problema3.c  Problema4.c  Problema5.c  Problema6.c
Talleres/: EjercicioTaller1.c  Taller1.c  Taller2.c  Taller3.c
Talleres/Semestre1/: Taller1.c  Taller3.c
Talleres/Semestre2/: Taller1.c  Taller2.c  Taller3.c  Taller4.c
pseint/: 18.04.2022_Func.psc  AreaTriangulo.psc  CalculoPromedio.psc  DiaSemana.psc  Estadistica.psc  ParImpar.psc
